--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/usman.jpeg" class="card-img-top organizer-img" alt="Usman Naseem">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Usman Naseem</h6>
+      <h6 class="card-title mb-1 fw-semibold">Dr. Usman Naseem</h6>
       <p class="card-text mb-0 organizer-text">Macquarie University</p>
     </div>
   </div>
@@ -153,7 +153,7 @@
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/robert.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">M.Sc. Robert Geislinger</h6>
+      <h6 class="card-title mb-1 fw-semibold">Robert Geislinger</h6>
       <p class="card-text mb-0 organizer-text">University of Hamburgg</p>
     </div>
   </div>
@@ -163,7 +163,7 @@
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/shamsuddeen.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Shamsuddeen Hassan Muhammad</h6>
+      <h6 class="card-title mb-1 fw-semibold">Dr. Shamsuddeen Hassan Muhammad</h6>
       <p class="card-text mb-0 organizer-text">Imperial College London</p>
     </div>
   </div>
@@ -173,7 +173,7 @@
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img" alt="Sarah Kohail">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Sarah Kohail</h6>
+      <h6 class="card-title mb-1 fw-semibold">Dr. Sarah Kohail</h6>
       <p class="card-text mb-0 organizer-text">Zayed University</p>
     </div>
   </div>
@@ -212,7 +212,7 @@
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/ibrahim.png" class="card-img-top organizer-img" alt="Ibrahim Said Ahmad">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Ibrahim Said Ahmad</h6>
+      <h6 class="card-title mb-1 fw-semibold">Dr. Ibrahim Said Ahmad</h6>
       <p class="card-text mb-0 organizer-text">Bayero University Kano (BUK), Northeastern University</p>
     </div>
   </div>
@@ -221,7 +221,7 @@
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/idris.png" class="card-img-top organizer-img" alt="Idris Abdulmumin">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Idris Abdulmumin</h6>
+      <h6 class="card-title mb-1 fw-semibold">Dr. Idris Abdulmumin</h6>
       <p class="card-text mb-0 organizer-text">University of Pretoria</p>
     </div>
   </div>
@@ -230,7 +230,7 @@
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/abhinew.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Abinew Ali Ayele</h6>
+      <h6 class="card-title mb-1 fw-semibold">Dr. Abinew Ali Ayele</h6>
       <p class="card-text mb-0 organizer-text">Bahir Dar University</p>
     </div>
   </div>
@@ -239,7 +239,7 @@
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/adem.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Adem Chanie Ali</h6>
+      <h6 class="card-title mb-1 fw-semibold">Prof. Adem Chanie Ali</h6>
       <p class="card-text mb-0 organizer-text">University of Hamburg</p>
     </div>
   </div>
