--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/Screenshot 2025-06-12 at 12.03.34 PM.png" class="card-img-top organizer-img" alt="Juan Ren">
+    <img src="assets/images/juan.jpeg" class="card-img-top organizer-img" alt="Juan Ren">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Juan Ren</h6>
       <p class="card-text mb-0 organizer-text">Macquarie University (Australia)</p>
