--- a/tasks.html
+++ b/tasks.html
@@ -1,195 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>POLAR @ SemEval 2026</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <!-- Bootstrap Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="assets/style.css"/>
-<style>
-  body {
-    background: #f8fafc;
-    font-family: 'Segoe UI', 'Roboto', Arial, sans-serif;
-    font-size: 1.13rem;         /* Increased from default; try 1.13-1.15rem */
-    line-height: 1.72;          /* More space between lines for easy reading */
-  }
-  .nav-tabs {
-    font-size: 1.18rem;         /* Slightly larger navigation */
-  }
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/style.css" />
+  <style>
+    body {
+      background: #f8fafc;
+      font-family: 'Segoe UI', 'Roboto', Arial, sans-serif;
+      font-size: 1.17rem;      /* Larger and readable base font */
+      line-height: 1.75;        /* Relaxed line height */
+      color: #273347;           /* Slightly softer black */
+    }
 
-  .the-task h2 {
-    color: #3366cc;
-    font-weight: 700;
-    margin-top: 1.7em;
-    font-size: 2.4rem;          /* Larger page headings */
-  }
-  .the-task h3 {
-    color: #3366cc;
-    font-weight: 700;
-    margin-top: 1.7em;
-    font-size: 1.6rem;          /* Subheads also larger */
-  }
+    .nav-tabs {
+      font-size: 1.15rem;
+      margin-bottom: 0;
+    }
+    .nav-tabs .nav-link {
+      padding: 0.7rem 1.8rem;
+      font-weight: 500;
+    }
+    .nav-tabs .nav-link.active {
+      font-weight: 600;
+      color: #3366cc !important;
+      background: #e6ecfe;
+      border-bottom: 2.5px solid #3366cc;
+    }
 
-  .the-task li {
-    margin-bottom: .6em;
-    font-size: 1.08rem;         /* List items larger for legibility */
-  }
+    section.the-task {
+      margin-top: 2.3rem;
+    }
 
-  .key-highlight {
-    background: #e5f4ff;
-    border-left: 4px solid #3366cc;
-    padding: 1.1em;
-    border-radius: 0.5em;
-    margin-bottom: 1.5em;
-    box-shadow: 0 2px 8px 0 rgba(0,0,0,.03);
-    font-size: 1.14rem;         /* Add a bit more focus to highlights */
-  }
+    .the-task .container {
+      max-width: 820px;
+      background: #ffffff;
+      padding: 2.3rem 2rem 2.5rem 2rem;
+      border-radius: 1.2rem;
+      box-shadow: 0 2px 12px 0 rgba(34,54,85,0.07), 0 0.5px 1.5px 0 rgba(80,100,140,0.06);
+    }
 
-  .lang-list li {
-    margin-bottom: .3em;
-    font-size: 1.08rem;         /* Language list larger */
-  }
+    .the-task h2 {
+      color: #3366cc;
+      font-weight: 800;
+      font-size: 2.3rem;
+      letter-spacing: 0.4px;
+      margin-top: 0.2em;
+      margin-bottom: 1.2em;
+      text-align: center;
+    }
+    .the-task h3 {
+      color: #3366cc;
+      font-weight: 700;
+      margin-top: 2em;
+      margin-bottom: 1em;
+      font-size: 1.4rem;
+      letter-spacing: 0.1px;
+    }
 
-  .footer-section {
-    background: #233871;
-    color: #fff;
-    padding: 2em 0 1em 0;
-    margin-top: 2em;
-    font-size: 1.14rem;         /* Footer text a bit bigger */
-  }
-  .footer-section a {
-    color: #90e0ef;
-    text-decoration: underline;
-  }
-</style>
+    .the-task p, .the-task li, .the-task ol, .the-task ul {
+      font-size: 1.1rem;
+    }
+    .the-task li {
+      margin-bottom: .5em;
+    }
+
+    /* For the colored language highlights in language lists */
+    .the-task li span[style*="background-color"] {
+      padding: 0.13em 0.45em 0.13em 0.45em;
+      border-radius: 0.38em;
+      font-weight: 500;
+      font-size: 0.99em;
+      display: inline-block;
+      margin: 0.15em 0 0.1em 0;
+    }
+
+    .the-task ol, .the-task ul {
+      margin-bottom: 2em;
+      padding-left: 1.3em;
+    }
+
+    .footer-section {
+      background: #233871;
+      color: #fff;
+      padding: 2.3em 0 1.3em 0;
+      margin-top: 2em;
+      font-size: 1.15rem;
+      letter-spacing: 0.02em;
+    }
+    .footer-section a {
+      color: #90e0ef;
+      text-decoration: underline;
+    }
+    .footer-section img {
+      filter: drop-shadow(0 2px 6px #334);
+      margin-top: 0.6em;
+      margin-bottom: 1.1em;
+    }
+    .footer-container p {
+      margin-bottom: 0.3em;
+    }
+
+    @media (max-width: 600px) {
+      .the-task .container {
+        padding: 1.1rem 0.3rem 1.3rem 0.3rem;
+        max-width: 98%;
+        border-radius: 0.45rem;
+      }
+      .the-task h2 { font-size: 1.32rem; }
+      .the-task h3 { font-size: 1.09rem; }
+      .footer-section { font-size: 1.05rem; }
+      .nav-tabs { font-size: 1.01rem; }
+      .nav-tabs .nav-link { padding: 0.6rem 0.9rem; }
+    }
+  </style>
 </head>
 <body>
 
-<!-- NAVIGATION -->
-<nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
-  <a class="nav-link" href="index.html"><i class="bi bi-info-circle"></i> About</a>
-  <a class="nav-link active" href="tasks.html"><i class="bi bi-list-check"></i> Tasks</a>
-  <a class="nav-link" href="participation.html"><i class="bi bi-door-open"></i> Participation</a>
-</nav>
-
-<!-- MAIN CONTENT -->
-<section class="the-task" style="margin-top: 2.3rem;">
+  <!-- TABS NAVIGATION -->
+  <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
+    <a class="nav-link" href="index.html">About</a>
+    <a class="nav-link active" href="tasks.html">Tasks</a>
+    <a class="nav-link" href="participation.html">Participation</a>
+  </nav>
+<section class="the-task" style="margin-top: 2rem;">
   <div class="container">
-    <h2 class="mb-4 text-center"><i class="bi bi-lightning-charge-fill text-warning"></i> The Task</h2>
+    <h2>The Task</h2>
 
-    <div class="key-highlight">
-      <strong><i class="bi bi-asterisk text-danger"></i> Polarization</strong> is the division of opinions into sharply contrasting groups, often with hostility or exclusion. In the digital era it’s rising—a challenge we must address. <b>P↔L↔R Task @ SemEval 2026</b> is the first initiative focused on computational approaches to detecting and interpreting polarization worldwide.
-    </div>
+    <p>Polarization refers to the division of opinions into two sharply contrasting groups, often accompanied by hostility, intolerance, or exclusion. In today's digital era, polarization is intensifying across platforms and geographies, influencing public discourse, exacerbating conflicts, and contributing to societal fragmentation.</p>
 
-    <p>This shared task brings together researchers and practitioners to build models that detect and analyze polarization across languages, cultures, and events—advancing both technology and social understanding.</p>
+    <p>This shared task is the first SemEval initiative focused on polarization, aiming to advance the computational understanding of how polarization manifests in text across multiple languages, cultures, and event types. Participants will develop models capable of detecting and interpreting polarization in a variety of online contexts.</p>
 
-    <div class="alert alert-info mt-4 mb-4 shadow-sm">
-      <strong><i class="bi bi-globe2"></i> Scope:</strong>
-      <ul class="mb-0">
-        <li>Multilingual (10+ languages, incl. mid/low-resource & Global South)</li>
-        <li>Multicultural & event-driven: elections, conflicts, protests, social debates</li>
-        <li>Real online discourse: news, forums, Reddit, Bluesky, blogs</li>
-      </ul>
-    </div>
+    <p>The task centers on textual data collected from real-world events such as elections, international conflicts, social protests, and ideological debates. The primary goal is to evaluate systems’ ability to identify polarized content and classify its targets..</p>
 
-    <h3 class="mt-5"><i class="bi bi-translate"></i> Languages</h3>
-    <ul class="lang-list">
-      <li><span class="badge bg-success">Annotated</span>
-        <span style="background-color:#D6FFD6;"> English, German, Spanish, Arabic, Urdu, Amharic, Hausa</span></li>
-      <li><span class="badge bg-warning text-dark">New</span>
-        <span style="background-color:#FFF8DC;"> Turkish, Italian, Burmese, Chinese</span></li>
-      <li><span class="badge bg-info text-dark">Extensions</span>
-        <span style="background-color:#CCFFFF;"> Mozambican Portuguese, Kinyarwanda, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa</span></li>
-    </ul>
+    <h3>Multilingual, Multicultural, and Multievent Scope</h3>
+    <p>To promote global inclusivity and cross-cultural representation, the dataset encompasses multiple languages, including many mid/low-resource and underrepresented ones in mainstream NLP research.</p>
 
-    <h3 class="mt-5"><i class="bi bi-diagram-3"></i> Task Format & Subtasks</h3>
+    <li>
+      <strong>Already collected and annotated:</strong>
+      <span style="background-color: #D6FFD6;">English, German, Spanish, Arabic, Urdu, Amharic, Hausa </span>
+    </li>
+    <li>
+      <strong>New languages:</strong>
+      <span style="background-color: #FFF8DC;">Turkish, Italian, Burmese, Chinese</span>
+    </li>
+    <li>
+      <strong>Possible extensions:</strong>
+     <span style="background-color: #CCFFFF;"> Mozambican Portuguese, Kinyarwanda, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa </span>
+    </li>
+    
+
+    <h3>Task Format and Subtasks</h3>
+    <p>Participants may choose to compete in one or more of three subtasks:</p>
     <ol>
-      <li><b>Polarization Detection</b> <span class="badge bg-primary">Subtask 1</span> — Binary: Is text polarized?</li>
-      <li><b>Polarization Type</b> <span class="badge bg-secondary">Subtask 2</span> — Classify the <u>target</u> (political, religious, ethnic, gender/sexuality, or other).</li>
-      <li><b>Manifestation Identification</b> <span class="badge bg-info text-dark">Subtask 3</span> — Classify <u>how</u> polarization is expressed (stereotyping, vilification, extreme language, etc; multi-label).</li>
+      <li><strong>Subtask 1: Polarization Detection</strong> – Binary classification to determine whether a post contains polarized content (Polarized or Not Polarized).</li>
+      <li><strong>Subtask 2: Polarization Type Classification</strong> – Identify the target of polarization, including political groups, religious groups, racial/ethnic communities, gender identities, sexual orientations, or other domain-specific targets.</li>
+      <li><strong>Subtask 3: Manifestation Identification</strong> – Classify how polarization is expressed; multiple labels possible, such as stereotyping, vilification, dehumanization, deindividuation, extreme language, lack of empathy, invalidation.</li>
     </ol>
 
-    <h3 class="mt-5"><i class="bi bi-database-fill"></i> Data Description</h3>
+    <h3>Data Description</h3>
+    <p>The dataset is sourced from news websites, Reddit, blogs, Bluesky, and regional forums, covering event types like elections, conflicts, gender rights, migration, and more. Each language includes between 3,000 and 5,000 annotated instances.</p>
+    <p>Annotation tools used include Label Studio, Prolific, Potato, and Mechanical Turk.</p>
+  
+    <h3>Research Contributions</h3>
+    <p>This task aims to advance socially responsible AI by supporting NLP for low-resource languages and fostering explainable and inclusive NLP systems. It will help establish multilingual benchmarks for polarization detection, promoting fair and transparent computational approaches to understanding societal divisions.</p>
+
+    <h3>Timeline</h3>
     <ul>
-      <li><b>Sources:</b> News, Reddit, blogs, Bluesky, regional forums</li>
-      <li><b>Context:</b> Elections, conflicts, rights debates, migration, and more</li>
-      <li><b>Size:</b> 3,000-5,000 annotated samples per language</li>
-      <li><b>Annotation:</b> Label Studio, Prolific, Potato, Mechanical Turk</li>
+      <li>Task announcement: TBD</li>
+      <li>Data release: TBD</li>
+      <li>Evaluation phase begins: TBD</li>
+      <li>Submission deadline: TBD</li>
+      <li>Paper submissions to SemEval: TBD</li>
+      <li>SemEval Workshop at ACL: TBD</li>
     </ul>
 
-    <h3 class="mt-5"><i class="bi bi-graph-up-arrow"></i> Research Contributions</h3>
-    <div class="alert alert-success">
-      <ul>
-        <li>Advance responsible AI for <b>low-resource languages</b></li>
-        <li>Foster <b>explainable</b> & <b>inclusive NLP</b></li>
-        <li>Benchmark multilingual polarization detection</li>
-        <li>Promote fair, transparent computational social science</li>
-      </ul>
-    </div>
-
-    <h3 class="mt-5"><i class="bi bi-calendar-week"></i> Timeline</h3>
-    <div class="timeline bg-light p-3 rounded mb-4">
-      <ul class="list-unstyled mb-0">
-        <li><b>Task announcement:</b> <span class="text-info">TBD</span></li>
-        <li><b>Data release:</b> <span class="text-info">TBD</span></li>
-        <li><b>Evaluation phase starts:</b> <span class="text-info">TBD</span></li>
-        <li><b>Submission deadline:</b> <span class="text-info">TBD</span></li>
-        <li><b>Paper submissions to SemEval:</b> <span class="text-info">TBD</span></li>
-        <li><b>Workshop @ ACL:</b> <span class="text-info">TBD</span></li>
-      </ul>
-    </div>
-
-    <h3 class="mt-5"><i class="bi bi-people-fill"></i> Who Should Participate?</h3>
+    <h3>Who Should Participate?</h3>
+    <p>This task welcomes participation from:</p>
     <ul>
-      <li><i class="bi bi-laptop"></i> NLP researchers & developers</li>
-      <li><i class="bi bi-bar-chart"></i> Computational social science teams</li>
-      <li><i class="bi bi-shield-exclamation"></i> Hate speech & misinformation practitioners</li>
-      <li><i class="bi bi-hand-index-thumb"></i> Peacebuilding, civil society orgs</li>
-      <li><i class="bi bi-mortarboard"></i> Students & academics (all backgrounds)</li>
+      <li>NLP researchers and developers</li>
+      <li>Computational social science teams</li>
+      <li>Practitioners working on hate speech and misinformation</li>
+      <li>Peacebuilding and civil society organizations</li>
+      <li>Students and academics from cross-disciplinary backgrounds</li>
     </ul>
 
-    <h3 class="mt-5"><i class="bi bi-person-vcard"></i> Organizing Team</h3>
-    <div class="row">
-      <div class="col-md-6">
-        <ul>
-          <li>University of Hamburg</li>
-          <li>Bahir Dar University</li>
-          <li>Macquarie University</li>
-          <li>Imperial College London</li>
-        </ul>
-      </div>
-      <div class="col-md-6">
-        <ul>
-          <li>University of Pretoria</li>
-          <li>Zayed University</li>
-          <li>Bayero University Kano</li>
-          <li>Northeastern University</li>
-        </ul>
-      </div>
-    </div>
+    <h3>Organizing Team</h3>
+    <p>The POLAR task is organized by researchers from:</p>
+    <ul>
+      <li>University of Hamburg</li>
+      <li>Bahir Dar University</li>
+      <li>Macquarie University</li>
+      <li>Imperial College London</li>
+      <li>University of Pretoria</li>
+      <li>Zayed University</li>
+      <li>Bayero University Kano</li>
+      <li>Northeastern University</li>
+    </ul>
 
-    <h3 class="mt-5"><i class="bi bi-envelope-at"></i> Contact & Community</h3>
-    <div class="alert alert-primary">
-      Questions? Email us at
-      <a href="mailto:polarization-semeval-2026-organisers@googlegroups.com" class="fw-bold">polarization-semeval-2026-organisers@googlegroups.com</a>
-      <br>
-      Join our <a href="#">Slack</a>, mailing list & GitHub (links soon)!
-    </div>
+    <h3>Contact and Community</h3>
+    <p>For questions or to join the community, reach out via email at <a href="polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.com</a>. Stay connected through the Slack channel, mailing list, and GitHub repository (links to be announced soon).</p>
   </div>
 </section>
 
-<footer class="footer-section text-center">
-  <div class="footer-container">
-    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height:auto; margin-bottom:12px;"/>
-    <p class="mb-0">&copy; 2026 POLAR Shared Task. All rights reserved.</p>
-    <p>Made with <span style="color:#ff5e6c;">&#10084;</span> by the POLAR Team</p>
+<footer class="footer-section">
+  <div class="footer-container text-center">
+    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
+    <p>&copy; 2026 POLAR Shared Task. All rights reserved.</p>
+    <p>Made with ❤️ by the POLAR Team</p>
   </div>
 </footer>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
